# tokenhub-monitor

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  auth.rs  commands.rs  lib.rs  main.rs
