[package]
name = "tokenhub-monitor"
version = "0.1.0"
description = "Cross-platform desktop tray app for monitoring tokenhub.cash package quota"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tokenhub_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "2"

# Platform-specific: tauri + macos-private-api only on macOS
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
keyring = { version = "3" }

[features]
custom-protocol = ["tauri/custom-protocol"]
